--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "archiver": "^7.0.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.8",
@@ -30,13 +30,13 @@
     "pg": "^8.11.0",
     "qrcode": "^1.5.4",
     "sequelize": "^6.32.1",
-    "sequelize-cli": "^6.6.0",
-    "sqlite3": "^5.1.7"
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "sqlite3": "^5.1.7"
   },
   "resolutions": {
     "glob": "^10.4.5",
