--- a/backend/package.json
+++ b/backend/package.json
@@ -35,14 +35,9 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "supertest": "^7.0.0",
-    "sqlite3": "^5.1.7"
+    "supertest": "^7.0.0"
   },
-  "resolutions": {
-    "glob": "^10.4.5",
-    "rimraf": "^5.0.10",
-    "npmlog": "^7.0.1",
-    "are-we-there-yet": "^4.0.0",
-    "gauge": "^5.0.0"
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
