--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,6 @@
     "rimraf": "^5.0.10",
     "npmlog": "^7.0.1",
     "are-we-there-yet": "^4.0.0",
-    "gauge": "^5.0.0",
-    "inflight": "^1.0.6"
+    "gauge": "^5.0.0"
   }
 }
