--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mime-types": "^2.1.35",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
