--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "archiver": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.2.0",
