email post deploy error

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "pdfkit": "^0.13.0",
     "pg": "^8.11.0",
     "qrcode": "^1.5.4",
+    "resend": "^6.7.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.0"
   },
