--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,8 @@
     "qrcode": "^1.5.4",
     "resend": "^6.7.0",
     "sequelize": "^6.32.1",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "jest": "^29.7.0",
